#35 fixed appearance on mobiles

--- a/src/components/node/NodeImageSwiperBlock/styles.module.scss
+++ b/src/components/node/NodeImageSwiperBlock/styles.module.scss
@@ -47,6 +47,7 @@
 
   @include tablet {
     padding-bottom: 0;
+    padding-top: 0;
     transform: translate(0, 0);
   }
 }
